# digital_art_converter

./: .gitignore  README.md  constants.py  image_converter.py  main.py  options.py  pyproject.toml  validators.py
converters/: image.py  video.py
utils/: application.py  argparser.py  validators.py
