[project]
name = "digital-art-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "audioop-lts>=0.2.2",
    "moviepy>=2.2.1",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "rich>=14.2.0",
]

[dependency-groups]
dev = []
